tests/snapshots/test_parser__tests__parser-2.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in1.pl\", error_manager.clone())"
---
func this() -> Unit {}
func is() -> Unit {}
func a() -> Unit {}
func valid() -> Unit {}
func program() -> Unit {}
