tests/snapshots/test_parser__tests__parser-3.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in2.pl\", error_manager.clone())"
---
func main() -> Unit {
    let add1 = 1
    let add2 = (1 + 2)
    let add3 = ((1 + 2) + 3)
    let sub1 = 1
    let sub2 = (1 - 2)
    let sub3 = ((1 - 2) - 3)
    let mul2 = (1 * 2)
    let mul3 = ((1 * 2) * 3)
    return
}
