tests/snapshots/test_parser__tests__parser-4.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in3.pl\", error_manager.clone())"
---
func main() {
    let mix1 = (1 + (2 * 3))
    let mix2 = ((1 * 2) + 3)
    let par1 = ((1 + 2) * 3)
    let par2 = (1 + (2 * 3))
    let par3 = (1 * (2 + 3))
}
