tests/snapshots/test_parser__tests__parser-5.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in4.pl\", error_manager.clone())"
---
func main() -> Unit {
    let val: Int64 = 1
    let arr1d: Int64[5] = [1, 2, ...]
    let zeros64: Int64[64] = [...]
    let arr2d: Int64[5][6] = [...]
    let warn: Int64[0] = [...]
    let warn2: Int64[0][4] = [...]
}
warning[W0008]: tests/data/parser_in4.pl:6:19: Array size is zero
   5 │      let arr2d: Int[5][6] = [...]
   6 │      let warn: Int[0] = [...]
   7 │      let warn2: Int[0][4] = [...]

warning[W0008]: tests/data/parser_in4.pl:7:20: Array size is zero
   6 │      let warn: Int[0] = [...]
   7 │      let warn2: Int[0][4] = [...]
   8 │  }
