tests/snapshots/test_parser__tests__parser-6.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in5.pl\", error_manager.clone())"
---
func main() -> Unit {
    let input: Int64[64] = [...]
    let squares = input
    return
}
