tests/snapshots/test_parser__tests__parser-7.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in6.pl\", error_manager.clone())"
---
func param1(a: Int64) -> Unit {}
func param2(b: Int64) -> Unit {}
func param3(a: Int64, b: Int64) -> Unit {}
func param4(a: Int64, b: Int64) -> Unit {}
func param5(a: Int64, b: Int64[64], my_param40: Int64[40][40]) -> Unit {}
