tests/snapshots/test_parser__tests__parser-8.snap
---
source: tests/test_parser.rs
expression: "parser_output(\"tests/data/parser_in7.pl\", error_manager.clone())"
---
func unit() -> Unit {}
func int() -> Int64 {}
func array() -> Int64[64] {}
func array(input: MyCustomType1) -> MyCustomType2 {}
