tests/snapshots/test_parser__tests__parser_10.snap
---
source: tests/test_parser.rs
expression: "parser_output(&format!(\"tests/data/parser{}.plsr\", 10), error_manager)"
---
func member_access() -> Int64 {
    return (((foo . bar) . baz) + (3 * ((array[3]) . member2)))
}
